Removing print statements.

--- a/Stopwatch.kv
+++ b/Stopwatch.kv
@@ -22,7 +22,7 @@ BoxLayoutExample:
     Button:
       id: stop_button
       text: "Stop"
-      on_press: root.stop_clock()
+      on_press: root.pause_clock()
       disabled: True
 
     Button:
