--- a/Stopwatch.kv
+++ b/Stopwatch.kv
@@ -20,8 +20,8 @@ BoxLayoutExample:
       on_press: root.start_clock()
 
     Button:
-      id: stop_button
-      text: "Stop"
+      id: pause_button
+      text: "Pause"
       on_press: root.pause_clock()
       disabled: True
 
